--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             </div>
             <div class="header-text">
                 <h1 class="header-title">front end deveoper</h1>
+                <hr>
                 <p>HTML<span class="dot">•</span>CSS<span class="dot">•</span>JavaScript</p>
-                <button class="header-btn">Dowiedz się więcej</button>
+                <button class="btn">Dowiedz się więcej</button>
             </div>
 
         </div>
@@ -39,6 +40,7 @@
     <main>
         <section class="about-me wrapper" id="about-me">
             <h2 class="about-me-title">o mnie</h2>
+            <hr>
             <img class="about-me-img" src="./img/about.jpg" alt="">
             <p class="about-me-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi doloribus rerum
                 autem sunt nihil laudantium, id sapiente praesentium veritatis debitis cumque neque soluta
@@ -47,10 +49,11 @@
                 omnis, corporis pariatur eum
                 perferendis vitae asperiores beatae alias! Perspiciatis, in cum eius rem deleniti impedit nesciunt quo
                 doloribus facilis. Officia!</p>
-            <button class="about-me-btn"> moje portfolio</button>
+            <button class="btn"> moje portfolio</button>
         </section>
         <section class="portfolio" id="portfolio">
             <h2 class="portfolio-title">portfolio</h2>
+            <hr>
             <div class="portfolio-box-img">
                 <a href=""> <img src="./img/portfolio/photo-1.jpg" alt="">
                     <h3>projekt</h3>
@@ -93,13 +96,19 @@
         </section>
         <section class="contact wrapper" id="contact">
             <h2 class="contact-title">kontakt</h2>
+            <hr>
             <form action="" method="POST">
                 <input type="text" name="name" id="name" placeholder="Imie">
                 <input type="email" name="email" id="email" placeholder="Email">
                 <textarea name="message" id="message" placeholder="Wiadomość"></textarea>
-                <input type="submit" value="Wyślij wiadomość" class="contact-btn">
+                <input type="submit" value="Wyślij wiadomość" class="btn">
             </form>
-            <div class="contact-items"></div>
+            <div class="contact-items">
+                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
         </section>
     </main>
     <footer>
